# opensnitch-tui

./: Cargo.toml  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
proto/: ui.proto
src/: alert.rs  app.rs  cli.rs  constants.rs  event.rs  main.rs  opensnitch_proto.rs  operator_util.rs  serde_impl.rs  server.rs  ui.rs
