[package]
name = "opensnitch-tui"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "opensnitch-tui"
path = "src/server.rs"

[dependencies]
tonic = "*"
prost = "0.14.1"
tonic-prost = "*"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"

[build-dependencies]
tonic-prost-build = "*"
